#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

TB-2009-12-11-0: Enhancem.:  o Hedeby issue 554, performance improvement
                             o improved .cvsignore
                 Bugfix:     fixed TCL error in Hedeby remove_blacklisted
                 Review:     RH

JG-2009-12-11-0: Bugfix:     o binary_submission test: wait for path_alias file
                               to appear
                             o some cleanup in qalter and qmaster_size check
                             o authuser test: call authuser on *all* hosts
                             o upgrade_general test: failed with bdb rpc
                               spooling and no_local_qmaster_spool
                             o get_spooled_jobs: with bdb rpc spooling, call
                               spooledit on an arbitrary host
                             o test system time also on testsuite host - it
                               might not be part of the cluster, but still needs
                               to have the correct time
                 Review:     CR

SH-2009-12-09-0: Bugfix:     increase job-runtime in reprioritization-test
                 Review:     CR

CR-2009-12-04-1: Cleanup:    enhanced timeout for general upgrade test from 60
                             to 120 seconds. Test might fail when qmaster 
                             startup/shutdown takes to long.
                 Review:     JG

CR-2009-12-04-0: Cleanup:    - fixed race condition in issue test 402
                             - enhanced test 402 with additional checking
                 Review:     JG
